# lode

./: .gitignore  Anchor.toml  README.md  Surfpool.toml  lode-prd-v1.md  lode-v1.md  package.json  security-report.md  tsconfig.json  txtx.yml
programs/lode-mining/: Cargo.toml
programs/lode-mining/src/: error.rs  lib.rs  mpl_core.rs  state.rs
programs/lode-mining/src/instructions/: advance_epoch.rs  claim.rs  finalize_epoch.rs  initialize.rs  join_epoch.rs  mint_miner.rs  mod.rs  pay_rent.rs  upgrade_miner.rs
programs/lode-mining/tests/: integration.rs  tla_invariants.rs
programs/lode-token/: Cargo.toml
programs/lode-token/src/: error.rs  lib.rs  state.rs
programs/lode-token/src/instructions/: initialize.rs  mod.rs
programs/lode-treasury/: Cargo.toml
programs/lode-treasury/src/: error.rs  lib.rs  state.rs
programs/lode-treasury/src/instructions/: harvest.rs  initialize.rs  mod.rs
runbooks/: README.md
runbooks/deployment/: main.tx
scripts/: package.json  test-e2e.ts  test-full-flow.ts  test-mining.ts  test-multi-user.ts
specs/: HashrateMarket.cfg  HashrateMarket.tla  LodeEmissions.cfg  LodeEmissions.tla  LodeEpoch.cfg  LodeEpoch.tla  LodeLottery.cfg  LodeLottery.tla  LodeMining.cfg  LodeMining.tla  LodeRent.cfg  LodeRent.tla  Makefile  README.md
tests/: lode-protocol.ts
tests/surfpool/: mining.test.ts
