[package]
name = "lode-token"
version = "0.2.0"
edition = "2021"
description = "LODE Protocol v2 - Token-2022 configuration and mint authority"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
pinocchio = "0.9"
pinocchio-tkn = "0.2"
pinocchio-system = "0.4"
pinocchio-pubkey = "0.3"
